<resources>
    <string name="app_name" translatable="false">PokeSlots</string>
    <string name="footerText">Developed by Rumenigue Nogueira</string>
    <string name="version" translatable="false">v1.0</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="gameName" translatable="false">PokeSlots</string>
    <string name="p_bulbasaur">Bulbasaur</string>
    <string name="p_charmander" translatable="false">Charmander</string>
    <string name="p_squirtle" translatable="false">Squirtle</string>
    <string name="hint_player_name">Player Name</string>
    <string name="playing_as">{0} playing as {1}</string>
    <string name="text_chips">Chips:</string>
    <string name="hint_chips" translatable="false">9999</string>
    <string name="chips_amount">Chips Amount</string>
    <string name="chips_1" translatable="false">1</string>
    <string name="chips_2" translatable="false">2</string>
    <string name="chips_3" translatable="false">3</string>
    <string name="chips_4" translatable="false">4</string>
    <string name="chips_5" translatable="false">5</string>
    <string name="chips_6" translatable="false">6</string>
    <string name="chips_7" translatable="false">7</string>
    <string name="chips_8" translatable="false">8</string>
    <string name="chips_9" translatable="false">9</string>
    <string name="chips_10" translatable="false">10</string>
    <string name="bt_spining">Spiiiining!</string>
    <string name="you_won">You won!</string>
    <string name="small_prize">Small prize!</string>
    <string name="you_lost">You lost!</string>
    <string name="fillForm">Please, fill all the form.</string>
    <string name="game_over">Game Over, click to play again</string>
    <string name="TAG_NAME" translatable="false">TAG_NAME</string>
    <string name="TAG_POKE" translatable="false">TAG_POKE</string>
    <string name="TAG_CHIP" translatable="false">TAG_CHIP</string>
    <string name="back">Back</string>
</resources>
