<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/game_header"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/horizontalPad"
        android:paddingRight="@dimen/horizontalPad"
        android:background="@color/gameBG_header"
        android:gravity="end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/gameact_textSize"
            android:paddingTop="15dp"
            android:textColor="@color/gameHeader_textColor"
            android:id="@+id/tvPlayingAs"
            android:text="@string/playing_as"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivPlayingAs"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontalPad"
        android:paddingRight="@dimen/horizontalPad"
        android:orientation="horizontal">

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/gameact_textSize"
            android:id="@+id/crTime"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/gameact_textSize"
            android:layout_weight="0.7"
            android:gravity="end"
            android:text="@string/text_chips"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/gameact_textSize"
            android:gravity="end"
            android:id="@+id/tvChips"
            android:layout_weight="0.3"
            android:hint="@string/hint_chips"/>
    </LinearLayout>
</LinearLayout>